--- a/style.css
+++ b/style.css
@@ -44,7 +44,9 @@
     flex-direction: column;
     justify-content: 'space-evenly';
     height: 80%;
-    background-color: lightblue;
+    background-color: white;
+    border: 4px solid black;
+    border-radius: 20px;
     width: 80%;
     align-self: center;
     border-radius: 20px;
