--- a/style.css
+++ b/style.css
@@ -52,6 +52,25 @@
     border-radius: 20px;
     overflow: scroll;
 }
+.contextMenu{
+    display: none;
+    position: absolute; 
+    z-index: 1000;
+    list-style: none;
+    border: 2px lightblue solid;
+    border-radius: 10px;
+    background-color: lightblue;
+    padding: 0.5em;
+}
+li{
+    margin: 0.1em;
+    padding: 0.3em;
+    border-radius: 0.25em;
+}
+li:hover{
+    background-color: lightcyan;
+    border: 1px solid lightcyan;
+}
 .footer{
     display: flex;
     align-items: flex-end;
