--- a/style.css
+++ b/style.css
@@ -63,6 +63,27 @@
     padding: 0.5em;
     opacity: 0.8;
 }
+.taskPending, .taskCompleted{
+    background-color: black;
+    height: 2em;
+    width: 10%;
+    border: 1.5px solid black;
+    border-radius: 10px;
+}
+p{
+    width: 60%;
+    height: 2em;
+    font-size: 1.75em;
+    margin: 0.45em 0 0 0;
+}
+div{
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    border-bottom: 3px solid lightgrey;
+    margin: 0 1em 0 1em;
+    overflow: scroll;
+}
 li{
     margin: 0.1em;
     padding: 0.3em;
