--- a/style.css
+++ b/style.css
@@ -17,14 +17,14 @@
     display: flex;
     flex-direction: column;
     justify-content: space-evenly;
-    height: 70vh;
+    height: 75vh;
     width: 30em;
 }
 .input{
     display: flex;
     justify-content: space-evenly;
     align-items: center;
-    height: 10%;
+    height: fit-content;
 }
 #enterTask{
     width: 60%;
@@ -32,7 +32,7 @@
     border: 2px black solid;
     border-radius: 20px;
 }
-#addTask{
+button{
     width: 20%;
     padding: 0.75em;
     border: 2px black solid;
@@ -43,7 +43,7 @@
     display: flex;
     flex-direction: column;
     justify-content: 'space-evenly';
-    height: 80%;
+    height: 70%;
     background-color: white;
     border: 4px solid black;
     border-radius: 20px;
@@ -51,6 +51,16 @@
     align-self: center;
     border-radius: 20px;
     overflow: scroll;
+}
+.options{
+    display: flex;
+    justify-content: space-evenly;
+    width: 80%;
+    height: fit-content;
+    align-self: center;
+}
+#clearAll,#progress{
+    width: 40%;
 }
 .contextMenu{
     display: none;
@@ -103,6 +113,7 @@ h1{
 }
 h3{
     margin-bottom: 1.25em;
+    align-self: center;
 }
 a{
     text-decoration: none;
